; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_remove_int.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_remove_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%llx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_remove_int(i32* %0, i64 %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca [20 x i8], align 16
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = getelementptr inbounds [20 x i8], [20 x i8]* %9, i64 0, i64 0
  %11 = load i64, i64* %7, align 8
  %12 = trunc i64 %11 to i32
  %13 = call i32 @snprintf(i8* %10, i32 20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds [20 x i8], [20 x i8]* %9, i64 0, i64 0
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @zap_remove(i32* %14, i64 %15, i8* %16, i32* %17)
  ret i32 %18
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @zap_remove(i32*, i64, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
